--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "3.7.0",
+    "node-sass": "4.12.0",
     "react": "^16.8.6",
+    "react-animated-css": "1.2.1",
     "react-dom": "^16.8.6",
+    "react-icons": "3.7.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
