--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-animated-css": "1.2.1",
     "react-dom": "^16.8.6",
     "react-icons": "3.7.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
