--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "npm-run-all": "4.1.5"
+    "npm-run-all": "4.1.5",
+    "react-html-parser": "2.0.2"
   },
   "scripts": {
     "start": "npm-run-all -p -l start:*",
