--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.17.0",
-    "mongoose": "5.5.11"
+    "mongoose": "5.5.11",
+    "nodemon": "^1.19.1"
   }
 }
