--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-animated-css": "1.2.1",
     "react-dom": "^16.8.6",
     "react-icons": "3.7.0",
+    "react-medium-editor": "^1.8.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
